data/forge_javadoc/1.11.2/raw/net/minecraft/world/gen/structure/StructureOceanMonument.md
---
title: "StructureOceanMonument"
description: "public class StructureOceanMonument extends MapGenStructure"
package: "net/minecraft/world/gen/structure"
version: "1.11.2"
forgeBuild: "13.20.0.2228"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.11.2-13.20.0.2228/net/minecraft/world/gen/structure/StructureOceanMonument.html"
sourceType: javadoc
---

# StructureOceanMonument

**Inheritance:** java.lang.Object → net.minecraft.world.gen.MapGenBase → net.minecraft.world.gen.structure.MapGenStructure → net.minecraft.world.gen.structure.StructureOceanMonument

## Class signature

```java
public class StructureOceanMonument extends MapGenStructure
```

## Constructors

- `StructureOceanMonument()`
- `StructureOceanMonument(java.util.Map<java.lang.String, java.lang.String> p_i45608_1_)`

## Methods

- `protected boolean canSpawnStructureAtCoords(int chunkX, int chunkZ)`
- `BlockPos getClosestStrongholdPos(World worldIn, BlockPos pos, boolean p_180706_3_)`
- `java.util.List<Biome.SpawnListEntry> getScatteredFeatureSpawnList()`
- `java.lang.String getStructureName()`
- `protected StructureStart getStructureStart(int chunkX, int chunkZ)`

## Fields

- `static java.util.List<Biome> SPAWN_BIOMES`
- `static java.util.List<Biome> WATER_BIOMES`
