data/forge_javadoc/1.12.2/raw/net/minecraft/world/gen/structure/StructureOceanMonument.md
---
title: "StructureOceanMonument"
description: "public class StructureOceanMonument extends MapGenStructure"
package: "net/minecraft/world/gen/structure"
version: "1.12.2"
forgeBuild: "14.23.5.2859"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.12.2-14.23.5.2859/net/minecraft/world/gen/structure/StructureOceanMonument.html"
sourceType: javadoc
---

# StructureOceanMonument

**Inheritance:** java.lang.Object → net.minecraft.world.gen.MapGenBase → net.minecraft.world.gen.structure.MapGenStructure → net.minecraft.world.gen.structure.StructureOceanMonument

## Class signature

```java
public class StructureOceanMonument extends MapGenStructure
```

## Constructors

- `StructureOceanMonument()`
- `StructureOceanMonument(java.util.Map<java.lang.String, java.lang.String> p_i45608_1_)`

## Methods

- `protected boolean canSpawnStructureAtCoords(int chunkX, int chunkZ)`
- `java.util.List<Biome.SpawnListEntry> getMonsters()`
- `BlockPos getNearestStructurePos(World worldIn, BlockPos pos, boolean findUnexplored)`
- `java.lang.String getStructureName()`
- `protected StructureStart getStructureStart(int chunkX, int chunkZ)`

## Fields

- `static java.util.List<Biome> SPAWN_BIOMES`
- `static java.util.List<Biome> WATER_BIOMES`
